--- a/src/station8.html
+++ b/src/station8.html
@@ -1,1 +1,38 @@
 <!doctype html>
+<html lang="ja" prefix=”og: http://ogp.me/ns#”>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="ページのタイトル">
+    <meta property="og:type" content="music.song">
+    <meta property="og:url" content="ページの URL">
+    <meta property="og:image" content="ページの画像のURL">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="サイトタイトル" />
+    <link rel="stylesheet" href="./assets/css/station8.css" type="text/css">
+    <title>Station 4</title>
+  </head>
+  <body>
+    <header>
+      <h1>hoge</h1>
+    </header>
+    <main>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" alt="hoge" class="card__img-top" />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" alt="hoge" class="card__img-top" />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+    </main>
+    <footer>
+      <h1>hoge</h1>
+    </footer>
+  </body>
+</html>
